--- a/src/main/webapp/resources/css/theme_zuse/navi.css
+++ b/src/main/webapp/resources/css/theme_zuse/navi.css
@@ -18,23 +18,23 @@
 }
 
 .dropDownMenu .items {
-	width: 175px;
-	border: 1px solid #183668;
-	border-top: 0px;
+	width: 200px;
+	border: solid #000000;
+	border-width: 0px 1px 1px 1px;
 	position: absolute;
-	background: #fff;
+	background: #FFFFFF;
 }
 
 .dropDownMenu .items .item a .pad {
-	padding: 4px;
 	padding-left: 10px;
-	font-size: 13px;
+	font-size: 14px;
+	letter-spacing: 0;
 }
 
 .dropDownMenu .items a {
 	background: none;
 	display: inline-block;
- 	width: 94%;
+ 	width: 95%;
 }
 
 .dropDownMenu .items .item:hover>a:hover {
@@ -43,20 +43,18 @@
 
 .dropDownMenu .items .item {
 	position: relative;
-	border-top: 1px solid #183668;
+	border-top: 1px solid #000000;
 }
 
 .dropDownMenu .item.hasChildren>a {
-	background: url('./images/All_Paginator_ArrowNext_15_Active.png') right
-		no-repeat;
+	background: url('./css/theme_zuse/images/All_Paginator_ArrowNext_15_Active.png') right no-repeat;
 }
 
 .dropDownMenu .item.hasChildren:hover>a:hover {
-	background: url('./images/All_Paginator_ArrowNext_15_Active.png') right
-		no-repeat;
+	background: url('./css/theme_zuse/images/All_Paginator_ArrowNext_15_Hover.png') right no-repeat;
 }
 
 .dropDownMenu .item.hasChildren .items {
-	top: -1px;
-	left: 175px;
+  	top: -1px;
+	left: 200px;
 }
